waybar/style.css
@import "../omarchy/current/theme/waybar.css";

* {
    /* background-color: @background; */
    /* color: @foreground; */

    border: none;
    min-height: 0;
    font-family: 'MonaspiceAr Nerd Font';
    font-weight: normal;
}

window#waybar {
    background-color: @transparent;
    color: @foreground;
    /* border-top: 1px solid alpha(@foreground, 0.9); */
    /* border-radius: 0 0 10 10; */
    transition-property: background-color;
    transition-duration: 0.5s;
}

#waybar > box {
    background-color: @background;
    color: @foreground;
    border-bottom: 2px solid alpha(@foreground, 0.9);
    transition-property: background-color;
    transition-duration: 0.5s;
    border: 1.5px solid rgba(255, 255, 255, 0.1);
    border-radius: 6px;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 1);
    margin: 0px 2px 2px 1px;
}

#custom-omarchy {
    margin: 0;
    padding-top: 1px;
    font-size: 16px;
}

.modules-left {
    border: 1.5px solid rgba(255, 255, 255, 0.1);
    background: alpha(@background, 0.2);
    border-radius: 6px;
    opacity: 0.95;
    text-shadow: 0px 0px 2px alpha(@foreground, 0.4);
}

.modules-center {
    border-radius: 0;
    text-shadow: 0px 0px 2px alpha(@foreground, 0.1);
    padding: 0 5px;
    padding-top: 0px;
    font-size: 13px;
    padding-left: 4px;
}

.modules-right {
    border-left: 1.5px solid rgba(255, 255, 255, 0.1);
    padding-left: 4px;
    padding-top: 0px;
    margin-right: 4px;
    text-shadow: 0px 0px 2px alpha(@foreground, 0.1);
    font-size: 11px;
}

#workspaces {
    padding: 1px 0px 1px;
    margin: 1px;
    border-radius: 4px;
    opacity: 0.95;
}

#workspaces button {
    min-width: 15px;
    min-height: 8px;
    padding: 1px;
    margin: 1px 1px;
    border-radius: 2px;
    background-color: alpha(@foreground, 0.75);
    opacity: 0.45;
    color: @background;
    font-size: 12px;
    transition: all 0.15s ease-in-out;
}

#workspaces button.active {
    background-color: alpha(@foreground, 0.9);
    border-radius: 2px;
    color: @background;
    font-size: 8px;
    min-width: 25px;
    opacity: 1;
    font-size: 12px;
    transition: all 0.15s ease-in-out;
}

#workspaces button:hover {
    color: @foreground;
    background: alpha(@background, 0.1);
    border-radius: 2px;
    opacity: 1;
}

#workspaces button.empty {
    opacity: 0.25;
}

#workspaces button.urgent {
    background-color: transparent;
    color: #ff0000;
    border-radius: 10px;
}

#custom-weather,
#memory,
#mpris,
#tray,
#cpu,
#battery,
#network,
#bluetooth,
#pulseaudio,
#custom-omarchy,
#idle_inhibitor,
#custom-screenrecording-indicator,
#custom-idle-indicator,
#custom-updatespacman,
#custom-screenrecording-indicator,
#custom-update {
    min-width: 12px;
    margin: 0 2.5px;
    padding: 0 2px;
}

tooltip {
    padding: 2px;
}

#window,
#hyprland-window {
    margin: 0;
}

.hidden {
    opacity: 0;
}

#tray {
    background-color: @transparent;
}

#tray > .passive {
    -gtk-icon-effect: dim;
}

#tray > .needs-attention {
    -gtk-icon-effect: highlight;
    background-color: @transparent;
}

#custom-cava {
    padding: 0 5px;
    background-color: @background;
    margin: 0px 4px 4px 4px;
    color: @foreground;
    min-height: 18px;
}

#custom-voxtype {
    min-width: 12px;
    margin: 0 0 0 7.5px;
}

#custom-voxtype.recording {
    color: #a55555;
}

#custom-idle-indicator,
#custom-notification-silencing-indicator {
    min-width: 12px;
    margin-left: 3px;
    margin-right: 0;
    font-size: 12px;
    padding-bottom: 0px;
}

#custom-idle-indicator.active,
#custom-notification-silencing-indicator.active {
    color: #a55555;
}

tooltip {
    background-color: alpha(@background, 1);
    border: 2px solid alpha(@foreground, 0.5);
    border-radius: 8px;
    box-shadow: 1px 1px 1px alpha(@background, 0.3);
    padding: 4px;
    font-size: 12px;
}

tooltip label {
    color: @foreground;
}

#custom-screenrecording-indicator {
    font-size: 12px;
    padding: 0px;
    margin: 2px;
}

#custom-screenrecording-indicator {
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    color: transparent;
}

#custom-screenrecording-indicator.active {
    color: #eb7087;
    animation-name: blink-recording;
    animation-duration: 0.5s;
}

@keyframes blink-recording {
    to {
        color: @background;
    }
}

@keyframes blink-inhibitor {
    to {
        color: @background;
    }
}

#idle_inhibitor {
    margin-right: 1px;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    color: @foreground;
}

#idle_inhibitor.activated {
    margin-right: 1px;
    color: #077b66;
    animation-name: blink-inhibitor;
    animation-duration: 1s;
}

